--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "node-fetch": "^2.7.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^6.22.1",
+    "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -46,7 +46,15 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "postcss": "^8.5.3",
+    "process": "^0.11.10",
+    "raw-loader": "^4.0.2",
+    "react-app-rewired": "^2.2.1",
+    "stream-browserify": "^3.0.0",
     "tailwindcss": "^3.4.17"
   }
 }
